[FIX] Makes select2 more flexible and able to wrap when it's too long.

--- a/6-components/_components.banners.scss
+++ b/6-components/_components.banners.scss
@@ -172,6 +172,8 @@ $banner-separator-colour:   $delim-highlight-bg-colour !default;
         }
 
         .control-group {
+            max-width: 100%;
+            white-space: normal;
             display: inline-block;
 
             &:not(:last-child) {
